--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ float:left; /* float is so the gif can tuck right on the edge of the page */
 
 
 
-Body.home {
+Body.index {
 
 background:url("tobias-keller-99139.jpg") no-repeat center center fixed; /* this is used so the background image dosent repeat itself */
 
